atoms/base-kde3: Review build order

--- a/packages/atoms/base-kde3/kde-frameworks-5/kdeclarative/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/kdeclarative/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kirigami
+- name: kactivities
   version: '>=0'
   category: kde-frameworks-5
