--- a/packages/atoms/base-kde3/kde-frameworks-5/kpty/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/kpty/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kscreenlocker
+- name: kwin
   version: '>=0'
   category: kde-plasma-5
