--- a/packages/atoms/base-kde3/dev-libs/appstream/build.yaml
+++ b/packages/atoms/base-kde3/dev-libs/appstream/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: knewstuff
+- name: kdeclarative
   version: '>=0'
   category: kde-frameworks-5
