--- a/packages/atoms/base-kde3/kde-frameworks-5/frameworkintegration/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/frameworkintegration/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kdecoration
+- name: appstream
   version: '>=0'
-  category: kde-plasma-5
+  category: dev-libs
