--- a/packages/atoms/base-kde3/kde-frameworks-5/kactivities/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/kactivities/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: appstream
+- name: knewstuff
   version: '>=0'
-  category: dev-libs
+  category: kde-frameworks-5
