--- a/packages/atoms/base-kde3/kde-frameworks-5/kquickcharts/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/kquickcharts/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kdeclarative
+- name: kirigami
   version: '>=0'
   category: kde-frameworks-5
