--- a/packages/atoms/base-kde3/kde-plasma-5/layer-shell-qt/build.yaml
+++ b/packages/atoms/base-kde3/kde-plasma-5/layer-shell-qt/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race17
+- name: breeze
   version: '>=0'
-  category: seed
+  category: kde-plasma-5
