--- a/packages/atoms/base-kde3/kde-frameworks-5/frameworkintegration/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/frameworkintegration/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary, to fix on funtoo-kits seed
+- >-
+  sed -i -e '/app-admin\/packagekit-qt/d' /var/git/meta-repo/kits/kde-kit/kde-frameworks/frameworkintegration/*.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
