kde-plasma-5/breeze: Bump v.5.25.5+1

--- a/packages/atoms/base-kde3/kde-plasma-5/breeze/definition.yaml
+++ b/packages/atoms/base-kde3/kde-plasma-5/breeze/definition.yaml
@@ -1,13 +1,17 @@
 name: breeze
-version: 5.25.5
+version: 5.25.5+1
 category: kde-plasma-5
 use_flags:
 - X
+- qml
 requires:
 - name: frameworkintegration
   version: '>=0'
   category: kde-frameworks-5
 - name: kcmutils
+  version: '>=0'
+  category: kde-frameworks-5
+- name: kiconthemes
   version: '>=0'
   category: kde-frameworks-5
 - name: kwindowsystem
