atoms/base-kde3: Review build order

--- a/packages/atoms/base-kde3/kde-frameworks-5/frameworkintegration/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/frameworkintegration/build.yaml
@@ -27,6 +27,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: appstream
+- name: kcmutils
   version: '>=0'
-  category: dev-libs
+  category: kde-frameworks-5
