--- a/packages/atoms/base-kde3/kde-frameworks-5/kirigami/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/kirigami/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: layer-shell-qt
+- name: kdecoration
   version: '>=0'
   category: kde-plasma-5
