--- a/packages/atoms/base-kde3/kde-frameworks-5/plasma/build.yaml
+++ b/packages/atoms/base-kde3/kde-frameworks-5/plasma/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kirigami
+- name: layer-shell-qt
   version: '>=0'
-  category: kde-frameworks-5
+  category: kde-plasma-5
