kde-plasma-5/kscreenlocker: Bump v.5.25.5+1

--- a/packages/atoms/base-kde3/kde-plasma-5/kscreenlocker/definition.yaml
+++ b/packages/atoms/base-kde3/kde-plasma-5/kscreenlocker/definition.yaml
@@ -1,10 +1,11 @@
 name: kscreenlocker
-version: 5.25.5
+version: 5.25.5+1
 category: kde-plasma-5
 use_flags:
 - -test
 - pam
 - prefix
+- qml
 requires:
 - name: wayland
   version: '>=0'
