kde-plasma-5/kwin: Bump v.5.25.5+1

--- a/packages/atoms/base-kde3/kde-plasma-5/kwin/definition.yaml
+++ b/packages/atoms/base-kde3/kde-plasma-5/kwin/definition.yaml
@@ -1,5 +1,5 @@
 name: kwin
-version: 5.25.5
+version: 5.25.5+1
 category: kde-plasma-5
 use_flags:
 - -gles2-only
@@ -10,6 +10,7 @@ use_flags:
 - multimedia
 - prefix
 - screencast
+- qml
 requires:
 - name: qtmultimedia
   version: '>=0'
@@ -21,6 +22,9 @@ requires:
   version: '>=0'
   category: kde-frameworks-5
 - name: knewstuff
+  version: '>=0'
+  category: kde-frameworks-5
+- name: ktextwidgets
   version: '>=0'
   category: kde-frameworks-5
 - name: breeze
