--- a/packages/atoms/base-kde3/kde-plasma-5/breeze/build.yaml
+++ b/packages/atoms/base-kde3/kde-plasma-5/breeze/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: kirigami
+- name: libxcvt
   version: '>=0'
-  category: kde-frameworks-5
+  category: x11-libs
