--- a/packages/atoms/base-kde3/kde-plasma-5/layer-shell-qt/build.yaml
+++ b/packages/atoms/base-kde3/kde-plasma-5/layer-shell-qt/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: breeze
+- name: kirigami
   version: '>=0'
-  category: kde-plasma-5
+  category: kde-frameworks-5
