--- a/packages/atoms/base-kde3/x11-libs/libxcvt/build.yaml
+++ b/packages/atoms/base-kde3/x11-libs/libxcvt/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race17
+- name: layer-shell-qt
   version: '>=0'
-  category: seed
+  category: kde-plasma-5
