gnome-extra/gnome-weather: Bump v.3.36.1+1

--- a/packages/atoms/base-gnome4/gnome-extra/gnome-weather/build.yaml
+++ b/packages/atoms/base-gnome4/gnome-extra/gnome-weather/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# To remove when will be available on funtoo-kits seed
+- >-
+  mkdir -p /etc/portage/patches/gnome-extra/gnome-weather/ &&
+  cp *.patch /etc/portage/patches/gnome-extra/gnome-weather/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
