sci-visualization/gnuplot: Bump v.5.2.6+1

--- a/packages/atoms/base-kde3/sci-visualization/gnuplot/definition.yaml
+++ b/packages/atoms/base-kde3/sci-visualization/gnuplot/definition.yaml
@@ -1,15 +1,15 @@
 name: gnuplot
-version: 5.2.6
+version: 5.2.6+1
 category: sci-visualization
 use_flags:
 - -doc
+- -ggi
 - -libcaca
 - -lua
 - -wxwidgets
 - X
 - cairo
 - gd
-- ggi
 - latex
 - libcerf
 - qt5
