--- a/packages/kernels/6.1/virtualbox-modules/definition.yaml
+++ b/packages/kernels/6.1/virtualbox-modules/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-modules
-version: 7.0.8.156879+5
+version: 7.0.10.158379
 category: kernel-6.1
 requires:
 - name: virtualbox-common
@@ -10,4 +10,4 @@ annotations:
 labels:
   emerge.packages: app-emulation/virtualbox-modules
   kernel.suffix: macaroni
-  kernel.version: 6.1.35
+  kernel.version: 6.1.49
