kernel-6.1/virtualbox-guest-additions: Bump v.7.0.10.158379

--- a/packages/kernels/6.1/virtualbox-guest-additions/definition.yaml
+++ b/packages/kernels/6.1/virtualbox-guest-additions/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-guest-additions
-version: 7.0.8.156879+5
+version: 7.0.10.158379
 category: kernel-6.1
 annotations:
   kernel_module: true
@@ -12,4 +12,4 @@ annotations:
 labels:
   emerge.packages: app-emulation/virtualbox-guest-additions
   kernel.suffix: macaroni
-  kernel.version: 6.1.35
+  kernel.version: 6.1.49
