seed-6.1/kernel: Bump v.6.1.49+1

--- a/packages/seeds/macaroni-kernel-6.1/build.yaml
+++ b/packages/seeds/macaroni-kernel-6.1/build.yaml
@@ -7,7 +7,7 @@ prelude:
 - >-
   luet repo update && luet upgrade &&
   luet install --sync-repos
-  kernel-6.1/macaroni-lts-sources
+  kernel-6.1/macaroni-sources
   dev-util/kbuild
   &&
   luet cleanup &&
