--- a/packages/kernels/6.1/virtualbox-guest-additions/definition.yaml
+++ b/packages/kernels/6.1/virtualbox-guest-additions/definition.yaml
@@ -1,6 +1,9 @@
 name: virtualbox-guest-additions
-version: 7.0.10.158379
+version: 7.0.10.158379+1
 category: kernel-6.1
+use_flags:
+- X
+- dbus
 annotations:
   kernel_module: true
   subsets:
