kernel-5.10/virtualbox-guest-additions: Bump v.7.0.10.158379+1

--- a/packages/kernels/5.10/virtualbox-guest-additions/definition.yaml
+++ b/packages/kernels/5.10/virtualbox-guest-additions/definition.yaml
@@ -1,6 +1,9 @@
 name: virtualbox-guest-additions
-version: 7.0.10.158379
+version: 7.0.10.158379+1
 category: kernel-5.10
+use_flags:
+- X
+- dbus
 provides:
 - name: virtualbox-guest-additions
   version: '>=0'
