iso/funtoo-xfce-testing: Update packages list

--- a/iso/funtoo-xfce-testing.yaml
+++ b/iso/funtoo-xfce-testing.yaml
@@ -23,6 +23,8 @@ packages:
 
   - virtual-entities/base
 
+  - sys-apps/gentoo-functions
+
   - app-editors/vim
 
   - sys-apps/lsb-release
@@ -125,7 +127,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
   # Dependency of calamares
   - kde-frameworks-5/plasma
