www-client/vivaldi-snapshot: Bump v.6.2.3096.3+1

--- a/packages/atoms/browsers/www-client/vivaldi-snapshot/build.yaml
+++ b/packages/atoms/browsers/www-client/vivaldi-snapshot/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  eval 'mkdir -p /etc/portage/package.license' &&
+  echo "www-client/vivaldi Vivaldi" > /etc/portage/package.license/99-browser-vivaldi.license
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
