--- a/packages/atoms/browsers/www-client/opera/build.yaml
+++ b/packages/atoms/browsers/www-client/opera/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  eval 'mkdir -p /etc/portage/package.license' &&
+  echo "www-client/opera OPERA-2014" > /etc/portage/package.license/00-opera.license
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
