--- a/packages/atoms/browsers/www-client/firefox/definition.yaml
+++ b/packages/atoms/browsers/www-client/firefox/definition.yaml
@@ -1,10 +1,8 @@
 name: firefox
-version: 116.0.1+1
+version: 116.0.1+2
 category: www-client
 use_flags:
 - -clang
-- -dbus
-- -libproxy
 - -pgo
 - -selinux
 - -sndio
@@ -15,8 +13,10 @@ use_flags:
 - -x86
 - X
 - amd64
+- dbus
 - jack
 - kernel_linux
+- libproxy
 - openh264
 - prefix
 - pulseaudio
@@ -29,6 +29,9 @@ use_flags:
 - wayland
 requires:
 - name: atk
+  version: '>=0'
+  category: dev-libs
+- name: dbus-glib
   version: '>=0'
   category: dev-libs
 - name: libevent
@@ -52,6 +55,9 @@ requires:
 - name: pipewire
   version: '>=0'
   category: media-video
+- name: libproxy
+  version: '>=0'
+  category: net-libs
 - name: zlib
   version: '>=0'
   category: sys-libs
