--- a/packages/atoms/desktop/media-gfx/inkscape/definition.yaml
+++ b/packages/atoms/desktop/media-gfx/inkscape/definition.yaml
@@ -1,5 +1,5 @@
 name: inkscape
-version: 1.3+1
+version: "1.3"
 category: media-gfx
 use_flags:
 - -graphicsmagick
@@ -20,7 +20,6 @@ use_flags:
 - python_single_target_python3_9
 - readline
 - visio
-- -python
 requires:
 - name: dia
   version: '>=0'
