net-misc/networkmanager: Bump v.1.42.8+2

--- a/packages/atoms/base-net/net-misc/networkmanager/build.yaml
+++ b/packages/atoms/base-net/net-misc/networkmanager/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: resolvconf
+- name: newt
   version: '>=0'
-  category: virtual
+  category: dev-libs
