--- a/packages/atoms/desktop/net-im/skypeforlinux/build.yaml
+++ b/packages/atoms/desktop/net-im/skypeforlinux/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary
+- >-
+  cp skypeforlinux-*.ebuild /var/git/meta-repo/kits/net-kit/net-im/skypeforlinux/ &&
+  cd /var/git/meta-repo/kits/net-kit/net-im/skypeforlinux/ &&
+  ebuild skypeforlinux-8.105.0.211.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
