app-text/ghostscript-gpl: Fix rdeps

--- a/packages/atoms/base-gtk/app-text/ghostscript-gpl/definition.yaml
+++ b/packages/atoms/base-gtk/app-text/ghostscript-gpl/definition.yaml
@@ -27,6 +27,9 @@ requires:
 - name: dbus
   version: '>=0'
   category: sys-apps
+- name: libidn
+  version: '>=0'
+  category: net-dns
 annotations:
   subsets:
     rules:
