--- a/portage-converter/base-gtk.yml
+++ b/portage-converter/base-gtk.yml
@@ -256,6 +256,10 @@ artefacts:
         # related to ignore rule?
         - category: net-dns
           name: libidn
+    runtime_deps:
+      packages:
+        - category: net-dns
+          name: libidn
   replacements:
     buildtime_deps:
       ignore:
