mail-mta/postfix: Add missing rdeps

--- a/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
+++ b/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
@@ -36,9 +36,12 @@ requires:
 - name: memcached
   version: '>=0'
   category: net-misc
-- name: pam
+- name: tinycdb
   version: '>=0'
-  category: sys-libs
+  category: dev-db
+- name: postgresql
+  version: '>=0'
+  category: dev-db-13
 conflicts:
 - name: nullmailer
   version: '>=0'
