--- a/portage-converter/base-net2.yaml
+++ b/portage-converter/base-net2.yaml
@@ -175,6 +175,12 @@ artefacts:
       packages:
         - category: dev-db
           name: tinycdb
+    runtime_deps:
+      packages:
+        - category: dev-db
+          name: tinycdb
+        - category: dev-db-13
+          name: postgresql
     provides:
       - category: virtual
         name: mta-service
