iso/funtoo-xfce-testing.yaml: Add nm-applet

--- a/iso/funtoo-xfce-testing.yaml
+++ b/iso/funtoo-xfce-testing.yaml
@@ -129,6 +129,9 @@ packages:
   - sys-devel/llvm-common
   - llvm
 
+  # Using gnome applet for network applet
+  - nm-applet
+
   # Dependency of calamares
   - kde-frameworks-5/plasma
 
