iso/funtoo-xfce-testing.yaml: Using compiled firefox

--- a/iso/funtoo-xfce-testing.yaml
+++ b/iso/funtoo-xfce-testing.yaml
@@ -44,7 +44,8 @@ packages:
   - sys-kernel/linux-firmware
   - sys-kernel/dracut
   - sys-fs/mdadm
-  - www-client/firefox-bin
+  #- www-client/firefox-bin
+  - www-client/firefox
 
   - sys-apps/shadow
   - sys-apps/iproute2
