--- a/packages/atoms/browsers/www-client/firefox/build.yaml
+++ b/packages/atoms/browsers/www-client/firefox/build.yaml
@@ -19,6 +19,9 @@ prelude:
   /pkgdir/ || true' && mkdir -p /pkgdir/{{ .Values.name }} && luet-portage --dir /pkgdir/{{
   .Values.name }} {{ ( index .Values.labels "emerge.packages" ) }} && eval 'rm -v
   /var/cache/distfiles/* ${LUET_PORTAGE_CACHE_PACKAGES}/* || true'
+# Customize Firefox bookmarks and distributor
+- >-
+  cp distribution.ini /pkgdir/{{ .Values.name }}/usr/lib64/firefox/distribution/
 package_dir: /pkgdir/{{ .Values.name }}
 excludes:
 - ^/var/cache/portage/
