mail-client/geary: Fix rdeps

--- a/packages/atoms/base-gnome4/mail-client/geary/definition.yaml
+++ b/packages/atoms/base-gnome4/mail-client/geary/definition.yaml
@@ -37,6 +37,12 @@ requires:
 - name: libnotify
   version: '>=0'
   category: x11-libs
+- name: libpeas
+  version: '>=0'
+  category: dev-libs
+- name: libhandy
+  version: '>=0'
+  category: dev-libs-0.0.13
 annotations:
   subsets:
     rules:
