--- a/portage-converter/base-gnome4.yaml
+++ b/portage-converter/base-gnome4.yaml
@@ -464,6 +464,12 @@ artefacts:
           name: libpeas
         - category: dev-libs
           name: folks
+    runtime_deps:
+      packages:
+        - category: dev-libs
+          name: libpeas
+        - category: dev-libs-0.0.13
+          name: libhandy
   packages:
     - mail-client/geary
   finalizer:
