sys-libs/libieee1284: Bump v.0.2.11+1

--- a/packages/atoms/desktop/sys-libs/libieee1284/definition.yaml
+++ b/packages/atoms/desktop/sys-libs/libieee1284/definition.yaml
@@ -1,10 +1,10 @@
 name: libieee1284
-version: 0.2.11
+version: 0.2.11+1
 category: sys-libs
 use_flags:
 - -doc
+- -python
 - -python_single_target_python2_7
-- python
 annotations:
   subsets:
     rules:
