iso/funtoo-lxqt-testing.yaml: Update pkgs list

--- a/iso/funtoo-lxqt-testing.yaml
+++ b/iso/funtoo-lxqt-testing.yaml
@@ -23,6 +23,8 @@ packages:
 
   - virtual-entities/base
 
+  - sys-apps/gentoo-functions
+
   - app-editors/vim
 
   - sys-apps/lsb-release
@@ -42,7 +44,7 @@ packages:
   - sys-kernel/linux-firmware
   - sys-kernel/dracut
   - sys-fs/mdadm
-  - www-client/firefox-bin
+  - www-client/firefox
 
   - sys-apps/shadow
   - sys-apps/iproute2
@@ -75,7 +77,7 @@ packages:
   # Add plymouth
   - sys-boot/plymouth
   - sys-boot/plymouth-openrc-plugin
-  - x11-themes/plymouth-funtoo
+  - x11-themes/plymouth-funtoo-next
 
   - x11-apps/setxkbmap
   - x11-apps/xrandr
@@ -125,7 +127,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
   # Dependency of calamares
   - kde-frameworks-5/plasma
@@ -162,7 +164,7 @@ repository:
   - repository/mottainai-dev
   - repository/macaroni-funtoo-dev
   - repository/macaroni-commons-dev
-  - repository/macaroni-security-dev
+  #- repository/macaroni-security-dev
 
 initramfs:
   kernel_file: "bzImage"
