--- a/packages/atoms/desktop/media-gfx/simple-scan/build.yaml
+++ b/packages/atoms/desktop/media-gfx/simple-scan/build.yaml
@@ -1,4 +1,9 @@
 prelude:
+# Temporary until next race
+- >-
+  sed -i -e 's|^VALA_MAX_API_VERSION.*|VALA_MAX_API_VERSION=0.54|g'
+  /var/git/meta-repo/kits/gnome-kit/media-gfx/simple-scan/simple-scan-3.36.6.ebuild &&
+  USE="gusb introspection policykit udev vala" emerge colord --nodeps -j
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
