--- a/packages/atoms/base-gtk2/dev-libs/libdaemon/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/libdaemon/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: colord
+- name: libepoxy
   version: '>=0'
-  category: x11-misc
+  category: media-libs
