--- a/packages/atoms/base-gtk2/media-libs/libepoxy/build.yaml
+++ b/packages/atoms/base-gtk2/media-libs/libepoxy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: xmltoman
+- name: colord
   version: '>=0'
-  category: app-doc
+  category: x11-misc
