x11-misc/colord: Bump v.1.3.5+1

--- a/packages/atoms/base-gtk2/x11-misc/colord/definition.yaml
+++ b/packages/atoms/base-gtk2/x11-misc/colord/definition.yaml
@@ -1,16 +1,16 @@
 name: colord
-version: 1.3.5
+version: 1.3.5+1
 category: x11-misc
 use_flags:
 - -argyllcms
 - -extra-print-profiles
 - -scanner
 - -systemd
-- -vala
 - gusb
 - introspection
 - policykit
 - udev
+- vala
 requires:
 - name: sqlite
   version: '>=0'
