atoms/base-gtk2: Review build order

--- a/packages/atoms/base-gtk2/dev-python/pycairo/build.yaml
+++ b/packages/atoms/base-gtk2/dev-python/pycairo/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libsoup
+- name: libgusb
   version: '>=0'
-  category: net-libs-2.4
+  category: dev-libs
