--- a/packages/atoms/base-gtk2/dev-libs/libgusb/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/libgusb/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: vala
+- name: libsoup
   version: '>=0'
-  category: dev-lang-0.54
+  category: net-libs-2.4
