portage-converter/gnome-extra.yaml: Add x11-themes/funtoo-gnome-shell-theme

--- a/portage-converter/gnome-extra.yaml
+++ b/portage-converter/gnome-extra.yaml
@@ -323,6 +323,7 @@ artefacts:
           name: macaroni-funtoo-race16
   packages:
     - x11-themes/murrine-themes
+    - x11-themes/funtoo-gnome-shell-theme
 
 include_layers:
 - layers/macaroni-funtoo-race16.yaml
