iso/funtoo-lxqt-testing.yaml: Add gnome-extra/nm-applet

--- a/iso/funtoo-lxqt-testing.yaml
+++ b/iso/funtoo-lxqt-testing.yaml
@@ -7,10 +7,10 @@ packages:
   - utils/yq
   - utils/jq
 
-  - macaroni/live-setup-lxqt
   - app-admin/whip
   - app-admin/macaronictl-thin
   - whip-profiles/macaroni
+  - macaroni/live-setup-lxqt
   - macaroni-release/funtoo
   - system/macaroni-funtoo-calamares
   - macaroni/whip-catalog
@@ -22,6 +22,9 @@ packages:
   - virtual/openrc
 
   - virtual-entities/base
+
+  # Add support for network applet
+  - gnome-extra/nm-applet
 
   - sys-apps/gentoo-functions
 
