iso/funtoo-xfce-testing.yaml: Add gnome-extra/nm-applet

--- a/iso/funtoo-xfce-testing.yaml
+++ b/iso/funtoo-xfce-testing.yaml
@@ -105,6 +105,9 @@ packages:
   # Needed for the font cache generation
   - media-fonts/encodings
 
+  # Add network config applet
+  - gnome-extra/nm-applet
+
   # grub
   - sys-fs-3/fuse
   # Apache (check ebuild)
