--- a/packages/toolchain/extra-kits/geaaru-kit/definition.yaml
+++ b/packages/toolchain/extra-kits/geaaru-kit/definition.yaml
@@ -1,6 +1,6 @@
 category: "toolchain"
 name: "meta-geaaru-kit"
-version: "0.20230927+1"
+version: "0.20231005"
 description: "Metadata package of the geaaru overlay"
 labels:
   repo: "https://github.com/geaaru/geaaru_overlay.git"
